@@ -281,17 +281,7 @@ class Koan:
             if not self.port: 
                 self.port = 25151 
         
-            # server name can either be explicit or DISCOVER, which
-            # means "check zeroconf" instead.
-
-            uses_avahi = False
-            if self.server == "DISCOVER": 
-                uses_avahi = True
-                if not os.path.exists("/usr/bin/avahi-browse"):
-                    raise InfoException, "avahi-tools is not installed"
-                potential_servers = self.avahi_search()
-            else:
-                potential_servers = [ self.server ]
+            potential_servers = [ self.server ]
 
             # zeroconf could have returned more than one server.
             # either way, let's see that we can connect to the servers
@@ -313,34 +303,36 @@ class Koan:
                 # in the original API
 
                 try:
-                    if uses_avahi:
-                        print "- connecting to: %s" % server
                     try:
                         try:
+                            # then try port 80 (non-SSL)
+                            print "- trying non-SSL"
+                            url = "http://%s:80/cobbler_api" % (server)
+                            self.xmlrpc_server = ServerProxy(url)
+                            self.xmlrpc_server.ping()
+                        except:
+                            print "- trying SSL"
                             # first try port 443 (SSL)
                             url = "https://%s:443/cobbler_api" % (server)
                             self.xmlrpc_server = ServerProxy(url)
-                            self.xmlrpc_server.get_profiles()
-                        except:
-                            # then try port 80 (non-SSL)
-                            url = "http://%s:80/cobbler_api" % (server)
-                            self.xmlrpc_server = ServerProxy(url)
-                            self.xmlrpc_server.get_profiles()
+                            self.xmlrpc_server.ping()
                     except:
                         # now try specified port in case Apache proxying
                         # is not configured
                         try:
+                            print "- trying non-SSL at port"
                             # assume the port is not encrypted
                             url = "http://%s:%s" % (server, self.port)
                             self.xmlrpc_server = ServerProxy(url)
-                            self.xmlrpc_server.get_profiles()
+                            self.xmlrpc_server.ping()
                         except:
+                            print "- trying SSL at port"
                             # this should not happen as cobbler
                             # uses apache proxying to provide SSL
                             # though try it anyway
                             url = "https://%s:%s" % (server, self.port)
                             self.xmlrpc_server = ServerProxy(url)
-                            self.xmlrpc_server.get_profiles()
+                            self.xmlrpc_server.ping()
                     connect_ok = True
                     break
                 except:
@@ -352,30 +344,27 @@ class Koan:
             if not connect_ok:
                 self.connect_fail()
                  
-            # ok, we have a valid connection.
-            # if we discovered through zeroconf, show the user what they've 
-            # connected to ...
-
-            if uses_avahi:
-                print "- connected to: %s" % self.server        
-
             # now check for the cobbler version.  Ideally this should be done
             # for each server, but if there is more than one cobblerd on the
             # network someone should REALLY be explicit anyhow.  So we won't
             # handle that and leave it to the network admins for now.
 
-            version = None
-            try:
-                version = self.xmlrpc_server.version()
-            except:
-                raise InfoException("cobbler server is downlevel and needs to be updated")
-             
-            if version == "?": 
-                print "warning: cobbler server did not report a version"
-                print "         will attempt to proceed."
+            #version = None
+            #try:
+            #    print "- checking remote API version"
+            #    version = self.xmlrpc_server.version()
+            #except:
+            #    raise InfoException("cobbler server is downlevel and needs to be updated")
 
-            elif COBBLER_REQUIRED > version:
-                raise InfoException("cobbler server is downlevel, need version >= %s, have %s" % (COBBLER_REQUIRED, version))
+            # this API call calls RPM and is slow, fix remotely
+            # then re-enable here
+             
+            #if version == "?": 
+            #    print "warning: cobbler server did not report a version"
+            #    print "         will attempt to proceed."
+ 
+            #elif COBBLER_REQUIRED > version:
+            #    raise InfoException("cobbler server is downlevel, need version >= %s, have %s" % (COBBLER_REQUIRED, version))
 
             # if command line input was just for listing commands,
             # run them now and quit, no need for further work
@@ -421,28 +410,40 @@ class Koan:
     def autodetect_system(self):
         """
         Determine the name of the cobbler system record that
-        matches this MAC address.  FIXME: should use IP 
-        matching as secondary lookup eventually to be more PXE-like
+        matches this MAC address. 
         """
-
-        fd = os.popen("/sbin/ifconfig")
-        mac = [line.strip() for line in fd.readlines()][0].split()[-1] #this needs to be replaced
-        fd.close()
-        if self.is_mac(mac) == False:
-            raise InfoException, "Mac address not accurately detected"
+        try:
+            import rhpl
+        except:
+            raise CX("the rhpl module is required to autodetect a system.  Your OS does not have this, please manually specify --profile or --system")
         systems = self.get_data("systems")
+        my_netinfo = utils.get_network_info()
+        my_interfaces = my_netinfo.keys()
+        mac_criteria = []
+        ip_criteria = []
+        for my_interface in my_interfaces:
+            mac_criteria.append(my_netinfo[my_interface]["mac_address"].upper())
+            ip_criteria.append(my_netinfo[my_interface]["ip_address"])
 
         detected_systems = []
         for system in systems:
-            for (iname, interface) in system['interfaces'].iteritems():
-                if interface['mac_address'].upper() == mac.upper():
-                    detected_systems.append(system['name'])
-                    break
+            obj_name = system["name"]
+            for (obj_iname, obj_interface) in system['interfaces'].iteritems():
+                mac = obj_interface["mac_address"].upper()
+                ip  = obj_interface["ip_address"].upper()
+                for my_mac in mac_criteria:
+                    if mac == my_mac:
+                        detected_systems.append(obj_name)
+                for my_ip in ip_criteria:
+                    if ip == my_ip:
+                        detected_systems.append(obj_name)
+
+        detected_systems = utils.uniqify(detected_systems)
 
         if len(detected_systems) > 1:
-            raise InfoException, "Multiple systems with matching mac addresses"
+            raise InfoException, "Error: Multiple systems with matching mac addresses"
         elif len(detected_systems) == 0:
-            raise InfoException, "No system matching MAC address %s found" % mac
+            raise InfoException, "Error: Could not find a matching system with MACs: %s or IPs: %s" % (",".join(mac_criteria), ",".join(ip_criteria))
         elif len(detected_systems) == 1:
             print "- Auto detected: %s" % detected_systems[0]
             return detected_systems[0]
@@ -1489,38 +1490,6 @@ class Koan:
         if uuid:
             return uuid
         return self.uuidToString(self.randomUUID())
-
-    def avahi_search(self):
-        """
-        If no --server is specified, attempt to scan avahi (mDNS) to find one
-        """
-
-        matches = []
-
-        cmd = [ "/usr/bin/avahi-browse", "--all", "--terminate", "--resolve" ]
-        print "- running: %s" % " ".join(cmd)
-        cmdp = sub_process.Popen(cmd, shell=False, stdout=sub_process.PIPE)
-        print "- analyzing zeroconf scan results"
-        data = cmdp.communicate()[0]
-        lines = data.split("\n")
-        
-        # FIXME: should switch to Python bindings at some point.
-        match_mode = False
-        for line in lines:
-            if line.startswith("="):
-                if line.find("cobblerd") != -1:
-                   match_mode = True
-                else:
-                   match_mode = False
-            if match_mode and line.find("address") != -1 and line.find("[") != -1:
-                (first, last) = line.split("[",1)
-                (addr, junk) = last.split("]",1)
-                if addr.find(":") == -1:
-                    # exclude IPv6 and MAC addrs that sometimes show up in results
-                    # FIXME: shouldn't exclude IPv6?
-                    matches.append(addr.strip())
-
-        return matches
 
 if __name__ == "__main__":
     main()
