@@ -2,6 +2,8 @@ Koan CHANGELOG
 
 - XXX 1.5.0
 - (DOCS) fix manpage, option is --nogfx, not --no-gfx
+- (FEAT) autodetect now works with IP as well as MAC, uses rhpl
+- (FEAT) some conection speedup improvements (WIP)
 
 - XXX 1.4.3
 - (SPEC) reduce python version requirements for EL2 (--replace-self only)
